clusters/talos-cluster/jdownloader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdownloader-deployment
  namespace: jdownloader
  labels:
    app: jdownloader-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: jdownloader-deployment
  template:
    metadata:
      labels:
        app: jdownloader-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: jdownloader
          image: jlesage/jdownloader-2:v26.07.2@sha256:47ee6c64917ca5326516ebe868714709c6bdd2e08ca0e33f6e80a943ef2019d2
          imagePullPolicy: Always
          ports:
            - containerPort: 5800
              name: web-interface
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: jdownloader-config
              mountPath: /config
            - name: jdownloader-media
              mountPath: /output
      volumes:
        - name: jdownloader-config
          persistentVolumeClaim:
            claimName: jdownloader-data
        - name: jdownloader-media
          persistentVolumeClaim:
            claimName: jdownloader-media
