clusters/talos-cluster/jdownloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdownloader-service
  namespace: jdownloader
spec:
  selector:
    app: jdownloader-deployment
  ports:
    - name: jdownloader
      protocol: TCP
      port: 5800
