clusters/talos-cluster/jdownloader/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jdownloader-route
  namespace: jdownloader
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "jdownloader.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jdownloader-service
          port: 5800
